test/typecheck/fail/duplicate_toplevel_let_mod.sail
$option -dmagic_hash

$project# A {} B {}

$start_module# A

let x : int = 3

$end_module# A

$start_module# B

let x : int = 4

$end_module# B
